--- a/package.json
+++ b/package.json
@@ -14,5 +14,23 @@
   "bugs": {
     "url": "https://github.com/ebfnb/ebfnb-server/issues"
   },
-  "homepage": "https://github.com/ebfnb/ebfnb-server#readme"
+  "homepage": "https://github.com/ebfnb/ebfnb-server#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-typescript": "^7.1.0",
+    "@typescript-eslint/eslint-plugin": "^1.3.0",
+    "@typescript-eslint/parser": "^1.3.0",
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "jest": "^24.1.0",
+    "prettier": "^1.16.4",
+    "typescript": "^3.3.3"
+  },
+  "dependencies": {}
 }
