--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "private": true,
   "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel ./src --out-dir ./build --extensions .ts",
+    "start": "npm run build && npm run serve",
+    "serve": "node ./build",
+    "test": "jest",
+    "typecheck": "tsc"
   },
   "repository": {
     "type": "git",
