--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "private": true,
   "main": "build/index.js",
   "scripts": {
-    "build": "babel ./src --out-dir ./build --extensions .ts",
-    "start": "npm run build && npm run serve",
+    "build": "rimraf ./build && babel ./src --out-dir ./build --extensions .ts",
+    "start": "npm test && npm run build && npm run serve",
     "serve": "node ./build",
-    "test": "jest",
-    "typecheck": "tsc"
+    "test": "tsc && jest"
   },
   "repository": {
     "type": "git",
@@ -27,6 +26,7 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-typescript": "^7.1.0",
     "@types/jest": "^24.0.0",
+    "@types/rimraf": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^1.3.0",
     "@typescript-eslint/parser": "^1.3.0",
     "eslint": "^5.13.0",
@@ -35,6 +35,7 @@
     "eslint-plugin-import": "^2.16.0",
     "jest": "^24.1.0",
     "prettier": "^1.16.4",
+    "rimraf": "^2.6.3",
     "typescript": "^3.3.3"
   },
   "dependencies": {}
