--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,14 @@
 {
   "compilerOptions": {
-    "target": "esnext",
     "allowJs": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noEmit": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "target": "es6"
   },
-  "include": ["src", "tests"]
+  "include": ["src"]
 }
